# scratch

./: .gitignore  Cargo.toml  README.md  SETUP.sh  build_python.sh  pyproject.toml  test_vector_dataset.py  visualize_graph.py
benches/: euclidean_distance.rs  graph_io.rs  kmeans.rs
outputs/: kmt_experiment_results.csv
python/: README.md  build_python.sh  check_distances.py  make_bench_html.py  make_random_dataset.py  plot_clique_histogram.py  plot_graph.py  pyproject.toml  sort_by_hilbert.py  test_vector_dataset.py  transparent_beam_search_plot.py  utils.py  visualize_graph.py
src/: lib.rs  main.rs  python.rs
src/clustering/: kmeans.rs  mod.rs
src/constructions/: graph_index.rs  index_trait.rs  ivf.rs  kmeans_tree.rs  mod.rs  neighbor_selection.rs  slow_preprocessing.rs  vamana.rs
src/data_handling/: dataset.rs  dataset_traits.rs  distance_matrix.rs  fbin.rs  mod.rs  subset.rs
src/distance/: euclidean.rs  euclidean_.rs  mod.rs
src/graph/: beam_search.rs  classic_graph.rs  compacted_graph.rs  graph.rs  graph_traits.rs  mod.rs  tests.rs  vector_graph.rs
src/util/: clique.rs  dataset.rs  duplicates.rs  edge_filter.rs  ground_truth.rs  mod.rs  recall.rs
src/util/ground_truth/: tests.rs
tmp/: vamana
