[package]
name = "scratch"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.31"
id_tree = "1.8.0"
indicatif = {version = "0.17.11", features = ["rayon"] }
memmap2 = "0.9.5"
ndarray = {version = "0.16.1", features = ["rayon"] }
numpy = { version = "0.24.0", optional = true }
pyo3 = { version = "0.24.0", features = ["extension-module"], optional = true }
rand = "0.9.0"
rand_distr = "0.5.1"
rayon = "1.10.0"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.17.1"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "graph_info"
path = "src/bin/graph_info.rs"

[[bin]]
name = "graph_roundtrip"
path = "src/bin/graph_roundtrip.rs"

[[bin]]
name = "compute_ground_truth"
path = "src/bin/compute_ground_truth.rs"

[[bin]]
name = "load_graph"
path = "src/bin/load_graph.rs"

[[bin]]
name = "build_ivf"
path = "src/bin/build_ivf.rs"

[[bin]]
name = "build_kmt"
path = "src/bin/build_kmt.rs"

[[bin]]
name = "build_slow_preprocessing"
path = "src/bin/build_slow_preprocessing.rs"

[[bin]]
name = "kmt_parameter_exploration"
path = "src/bin/experiments/kmt_parameter_exploration.rs"

[[bench]]
name = "euclidean_distance"
harness = false

[[bench]]
name = "graph_io"
harness = false

[[bench]]
name = "kmeans"
harness = false

[features]
verbose_kmeans = []
verbose_kmt = []
python = ["dep:pyo3", "dep:numpy"]
numpy = ["dep:numpy"]
