[package]
name = "scratch"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = "4.5.31"
csv = "1.3.1"
id_tree = "1.8.0"
indicatif = {version = "0.17.11", features = ["rayon"] }
itertools = "0.14.0"
memmap2 = "0.9.5"
ndarray = {version = "0.16.1", features = ["rayon"] }
numpy = { version = "0.24.0", optional = true }
pyo3 = { version = "0.24.0", features = ["extension-module"], optional = true }
rand = "0.9.0"
rand_distr = "0.5.1"
rayon = "1.10.0"
simsimd = "6.5.0"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.7.0"
tempfile = "3.17.1"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "graph_info"
path = "src/bin/graph_info.rs"

[[bin]]
name = "graph_roundtrip"
path = "src/bin/graph_roundtrip.rs"

[[bin]]
name = "compute_groundtruth"
path = "src/bin/compute_groundtruth.rs"

[[bin]]
name = "load_graph"
path = "src/bin/load_graph.rs"

[[bin]]
name = "build_ivf"
path = "src/bin/build_ivf.rs"

[[bin]]
name = "build_kmt"
path = "src/bin/build_kmt.rs"

[[bin]]
name = "build_slow_preprocessing"
path = "src/bin/build_slow_preprocessing.rs"

[[bin]]
name = "build_vamana"
path = "src/bin/build_vamana.rs"

[[bin]]
name = "kmt_parameter_exploration"
path = "src/bin/experiments/kmt_parameter_exploration.rs"

[[bin]]
name = "navigable_scaling"
path = "src/bin/experiments/navigable_scaling.rs"

[[bench]]
name = "euclidean_distance"
harness = false

[[bench]]
name = "graph_io"
harness = false

[[bench]]
name = "kmeans"
harness = false

[features]
verbose_kmeans = []
verbose_kmt = []
python = ["dep:pyo3", "dep:numpy"]
numpy = ["dep:numpy"]
dcmp = []

[[bin]]
name = "find_duplicates"
path = "src/bin/find_duplicates.rs"

