[build-system]
requires = ["maturin>=1.8.3"]
build-backend = "maturin"

[project]
name = "scratch"
version = "0.1.0"
description = "Vector dataset library with nearest neighbor search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "maturin>=1.8.3",
    "numpy>=2.2.4",
    "tqdm>=4.67.1",
]

[tool.maturin]
features = ["python"]
module-name = "scratch"
bindings = "pyo3"
manifest-path = "../Cargo.toml"
